# cpp-graphics-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeConfig.in.cmake  CMakeLists.txt  DEBT.md
dependencies/: CMakeLists.txt
dependencies/glad/glad/: gl.h
examples/: CMakeLists.txt  blkhurst.rc  example.cpp
include/blkhurst/: engine.hpp
include/blkhurst/cameras/: camera.hpp  ortho_camera.hpp  perspective_camera.hpp
include/blkhurst/controllers/: controller.hpp  fly_controller.hpp  orbit_controller.hpp
include/blkhurst/engine/: config.hpp  root_state.hpp
include/blkhurst/engine/config/: assets.hpp  defaults.hpp  logger.hpp  types.hpp  ui.hpp  window.hpp
include/blkhurst/events/: event_bus.hpp  events.hpp
include/blkhurst/geometry/: bilinear_quad_geometry.hpp  box_geometry.hpp  capsule_geometry.hpp  circle_geometry.hpp  cylinder_geometry.hpp  geometry.hpp  mesh_data.hpp  plane_geometry.hpp  sphere_geometry.hpp  torus_geometry.hpp  torus_knot_geometry.hpp
include/blkhurst/graphics/: buffer.hpp  program.hpp  vertex_array.hpp
include/blkhurst/ibl/: pmrem_generator.hpp
include/blkhurst/input/: input.hpp  input_keys.hpp
include/blkhurst/loaders/: cube_texture_loader.hpp  texture_loader.hpp
include/blkhurst/materials/: basic_material.hpp  material.hpp  pipeline_state.hpp  skybox_material.hpp  uniforms.hpp  uv_transform.hpp
include/blkhurst/objects/: mesh.hpp  object3d.hpp
include/blkhurst/renderer/: cube_render_target.hpp  render_target.hpp  renderer.hpp  uniform_blocks.hpp  uniforms.hpp
include/blkhurst/scene/: scene.hpp
include/blkhurst/shaders/: shader_preprocessor.hpp  shader_registry.hpp
include/blkhurst/shaders/builtin/: basic.glsl.hpp  equirect.glsl.hpp  fullscreen.glsl.hpp  skybox.glsl.hpp
include/blkhurst/shaders/builtin/ibl/: brdf_lut.glsl.hpp  irradiance.glsl.hpp  prefilter_ggx.glsl.hpp
include/blkhurst/shaders/chunks/: color_fragment.glsl.hpp  colorspace_fragment.glsl.hpp  common.glsl.hpp  envmap_fragment.glsl.hpp  io_fragment.glsl.hpp  io_vertex.glsl.hpp  normal_fragment.glsl.hpp  pbr_common.glsl.hpp  tonemapping_fragment.glsl.hpp  uniform_common.hpp
include/blkhurst/textures/: cube_texture.hpp  texture.hpp
include/blkhurst/ui/: ui_entry.hpp
include/blkhurst/util/: assets.hpp
src/cameras/: camera.cpp  camera.hpp  ortho_camera.cpp  ortho_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
src/controllers/: fly_controller.cpp  orbit_controller.cpp
src/engine/: clock.cpp  clock.hpp  engine.cpp  root_state.hpp
src/events/: event_bus.cpp
src/geometry/: geometry.cpp  geometry.hpp
src/graphics/: buffer.cpp  program.cpp  program.hpp  vertex_array.cpp
src/ibl/: brdf_lut_material.hpp  irradiance_material.hpp  pmrem_generator.cpp  prefilter_ggx_material.hpp
src/input/: input.cpp
src/loaders/: cube_texture_loader.cpp  texture_loader.cpp
src/logging/: logger.hpp
src/materials/: basic_material.cpp  equirect_material.cpp  equirect_material.hpp  material.cpp  skybox_material.cpp
src/objects/: mesh.cpp  object3d.cpp  object3d.hpp
src/renderer/: cube_render_target.cpp  render_target.cpp  renderer.cpp
src/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/shaders/: shader_preprocessor.cpp  shader_registry.cpp
src/textures/: cube_texture.cpp  texture.cpp
src/ui/: ui_entry.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/fonts/inter/: inter_variable_ttf.hpp
src/util/: assets.cpp
src/window/: glfw_callbacks.cpp  glfw_callbacks.hpp  types.hpp  window_manager.cpp  window_manager.hpp
